# Weather_app

./: .gitignore  Cargo.toml  README.md  bacon.toml  flake.nix
src/: main.rs  types.rs
