[package]
name = "weather_app"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.96", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.14.0", features = ["full"] }
reqwest = { version = "0.11.4", features = ["json"] }
clap = "2.33.3"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
